# w_scan2

./: .clang-format  .clang-format-ignore  .gitignore  .ycm_extra_conf.py  ChangeLog  Makefile.add  Makefile.am  Makefile.in  README  README.md  atsc_psip_section.c  atsc_psip_section.h  char-coding.c  char-coding.h  code_style.sh  configure  configure.ac  configure.in  countries.c  countries.h  descriptors.c  descriptors.h  diseqc.c  diseqc.h  dump-dvbscan.c  dump-dvbscan.h  dump-mplayer.c  dump-mplayer.h  dump-vdr.c  dump-vdr.h  dump-vlc-m3u.c  dump-vlc-m3u.h  dump-xine.c  dump-xine.h  dump-xml.c  dump-xml.h  dvbscan.c  dvbscan.h  emulate.c  emulate.h  (+16 more)
.github/workflows/: ci.yml  release.yml  stylecheck.yml
doc/: README.file_formats  README_VLC_DVB  rotor.conf  service_list.dtd  services.xml  w_scan.1  w_scan2.1
packaging/debian/: changelog  control  copyright  docs  examples  repack-upstream.sh  rules  watch
packaging/debian/source/: options
src/: atsc_psip_section.c  atsc_psip_section.h  char-coding.c  char-coding.h  countries.c  countries.h  descriptors.c  descriptors.h  diseqc.c  diseqc.h  dump-dvbscan.c  dump-dvbscan.h  dump-dvbv5scan.c  dump-dvbv5scan.h  dump-mplayer.c  dump-mplayer.h  dump-vdr.c  dump-vdr.h  dump-vlc-m3u.c  dump-vlc-m3u.h  dump-xine.c  dump-xine.h  dump-xml.c  dump-xml.h  dvbscan.c  dvbscan.h  emulate.c  emulate.h  extended_frontend.h  iconv_codes.c  iconv_codes.h  lnb.c  lnb.h  parse-dvbscan.c  parse-dvbscan.h  satellites.c  satellites.h  scan.c  scan.h  section.c  (+4 more)
tools/: generate_satellites_dat.php  satellite_names.csv
